github and google OAuth

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 DATABASE_URL="mongodb+srv://NewUser:NewUser@cluster.v58ya9y.mongodb.net/db-contacts"
 NEXTAUTH_JWT_SECRET = "NEXT-JWT-SECRET"
 NEXTAUTH_SECRET = "NEXT-SECRET"
+
+GITHUB_ID=2bccabac95340931c37e
+GITHUB_SECRET=05dced7b44a9ec2644d800692882c756efe56b36
+
+GOOGLE_ID=47049256873-djbpbg3p59auobqdbaltijsshovhdq0l.apps.googleusercontent.com
+GOOGLE_SECRET=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
