--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "lodash": "^4.17.21",
     "next": "13.4.12",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.201",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "prisma": "^5.5.2",
